feat: Dark theme with static plane background

--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@
 <body>
 
   <div class="container">
+    <img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/6007/airplane-clipart-xl.png"
+      alt="Aviator Plane" class="plane-bg">
+
     <!-- NAV -->
     <nav class="navbar">
       <div class="brand">AVIATOR</div>
@@ -289,8 +292,7 @@
 
     <!-- HERO -->
     <div class="hero">
-      <img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/6007/airplane-clipart-xl.png"
-        alt="Aviator Plane" class="plane-bg">
+      <!-- Image removed from here -->
 
       <div class="hero-content">
         <div class="status-pill"><span class="dot"></span> LIVE NOW</div>
