--- a/index.html
+++ b/index.html
@@ -278,7 +278,11 @@
 <body>
 
   <div class="container">
-    <img src="https://i.postimg.cc/1X37WcYF/AVION.png" alt="Aviator Plane" class="plane-bg">
+    <!-- SVG PLANE -->
+    <svg class="plane-bg" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M482.3 192c34.2 0 93.7 29 93.7 64c0 36-59.5 64-93.7 64l-116.6 0L265.2 495.9c-5.7 10-16.3 16.1-27.8 16.1l-56.2 0c-10.6 0-18.3-10.2-15.4-20.4l49-171.6L112 320 48.8 410.5C44.6 416.5 37.7 420 30.5 420L6.4 420c-8.9 0-15.5-8.4-13.3-17L32 256 32 256 -6.9 109c-2.2-8.6 4.4-17 13.3-17l24.1 0c7.2 0 14.1 3.5 18.2 9.5L112 192l102.8 0-49-171.6C163 10.2 170.6 0 181.2 0l56.2 0c11.5 0 22.1 6.2 27.8 16.1L365.7 192l116.6 0z" />
+    </svg>
 
     <!-- NAV -->
     <nav class="navbar">
