--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     /* BACKGROUND PLANE WATERMARK */
     .plane-bg {
       position: absolute;
-      bottom: 20%;
+      bottom: -40px;
       left: 0;
       width: 150px;
       height: auto;
@@ -95,15 +95,15 @@
 
     @keyframes fly {
       0% {
-        transform: translate(-150px, 50px) rotate(-10deg) scale(0.8);
+        transform: translate(-150px, 0px) rotate(-10deg) scale(0.6);
       }
 
       20% {
-        transform: translate(50px, 0px) rotate(0deg) scale(1);
+        transform: translate(10vw, -10vh) rotate(-25deg) scale(0.8);
       }
 
       100% {
-        transform: translate(120vw, -200px) rotate(-15deg) scale(1.3);
+        transform: translate(120vw, -120vh) rotate(-45deg) scale(1.5);
       }
     }
 
