--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     :root {
       /* DARK AVIATOR THEME */
       --primary-black: #0F172A;
-      --highlight-red: #E31C2D;
+      --highlight-red: #FFD700;
+      /* Switched to GOLD per user request */
       --action-green: #22C55E;
 
       --bg-page: #0F172A;
@@ -145,7 +146,8 @@
       align-items: center;
       gap: 6px;
       background: var(--highlight-red);
-      color: white;
+      color: #0F172A;
+      /* Dark text on Gold */
       padding: 6px 14px;
       border-radius: 100px;
       font-size: 0.75rem;
@@ -153,7 +155,7 @@
       text-transform: uppercase;
       margin-bottom: 24px;
       align-self: center;
-      box-shadow: 0 4px 15px rgba(227, 28, 45, 0.3);
+      box-shadow: 0 4px 15px rgba(255, 215, 0, 0.3);
     }
 
     .dot {
@@ -214,7 +216,7 @@
       color: var(--highlight-red);
       line-height: 1;
       margin: 10px 0;
-      text-shadow: 0 0 20px rgba(227, 28, 45, 0.4);
+      text-shadow: 0 0 20px rgba(255, 215, 0, 0.4);
     }
 
     .reg-bonus-row {
@@ -232,7 +234,7 @@
       font-weight: 900;
       font-size: 1.8rem;
       text-transform: uppercase;
-      text-shadow: 0 0 10px rgba(227, 28, 45, 0.5);
+      text-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
       animation: pulseText 1.5s infinite alternate;
     }
 
