fix: Swap 5M Offer with Free 50 Offer text

--- a/index.html
+++ b/index.html
@@ -284,13 +284,14 @@
         <p class="subtitle">The world's #1 Crash Game.</p>
 
         <div class="offer-card">
-          <div style="font-size: 0.9rem; text-transform:uppercase; letter-spacing:1px; opacity:0.8;">Possible Win</div>
-          <div class="offer-val">KES 5M+</div>
+          <div style="font-size: 0.9rem; text-transform:uppercase; letter-spacing:1px; opacity:0.8;">Exclusive Offer
+          </div>
+          <div class="offer-val" style="font-size: 2rem; line-height: 1.1;">CLAIM YOUR FREE 50 KES RIGHT NOW!!</div>
           <div style="font-size: 0.9rem; color:#ccc;">Instant Withdrawals</div>
 
           <div class="reg-bonus-row">
-            <span style="font-size:1rem;">Register Account & Get:</span>
-            <span class="reg-bonus-highlight">FREE 50 KES</span>
+            <span style="font-size:1rem;">Possible Win:</span>
+            <span class="reg-bonus-highlight">KES 5 MILLION+</span>
           </div>
 
           <a href="https://boompesa.com/" class="cta-button">PLAY NOW</a>
