fix: Removed 'FREE' from offer text

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <div class="offer-card">
           <div style="font-size: 0.9rem; text-transform:uppercase; letter-spacing:1px; opacity:0.8;">Exclusive Offer
           </div>
-          <div class="offer-val" style="font-size: 2rem; line-height: 1.1;">CLAIM YOUR FREE 50 KES RIGHT NOW!!</div>
+          <div class="offer-val" style="font-size: 2rem; line-height: 1.1;">CLAIM YOUR 50 KES RIGHT NOW!!</div>
           <div style="font-size: 0.9rem; color:#ccc;">Instant Withdrawals</div>
 
           <div class="reg-bonus-row">
