feat: Show best active time for each day individually

--- a/dashboard.html
+++ b/dashboard.html
@@ -313,7 +313,12 @@
         <div style="height:120px; margin-bottom:20px;"><canvas id="hourChart"></canvas></div>
 
         <div style="margin-bottom:12px; font-size:0.75rem; color:var(--text-secondary);">BY DAY (Weekly)</div>
-        <div style="height:120px;"><canvas id="dayChart"></canvas></div>
+        <div style="height:120px; margin-bottom:12px;"><canvas id="dayChart"></canvas></div>
+
+        <!-- NEW: Daily Peak Times Grid -->
+        <div id="dailyPeaks" style="display:grid; grid-template-columns:repeat(7, 1fr); gap:2px; text-align:center;">
+          <!-- JS will populate this -->
+        </div>
       </div>
     </div>
 
@@ -545,6 +550,22 @@
           }]
         },
         options: { plugins: { legend: { display: false } }, maintainAspectRatio: false, scales: { y: { display: false }, x: { grid: { display: false } } } }
+      });
+
+      // Populate Daily Peak Times Grid
+      const peaksEl = document.getElementById('dailyPeaks');
+      peaksEl.innerHTML = '';
+      days.forEach((d, i) => {
+        const h = pData.bestHours[i];
+        const timeStr = h === -1 ? '-' : (hrs[h] || h + 'H');
+        const color = i === pData.bestDay ? 'var(--success)' : 'var(--text-secondary)';
+
+        peaksEl.innerHTML += `
+          <div style="font-size:0.7rem; background:rgba(255,255,255,0.03); padding:4px 0; border-radius:4px;">
+            <div style="color:#666; margin-bottom:2px;">${d.charAt(0)}</div>
+            <div style="color:${color}; font-weight:700;">${timeStr}</div>
+          </div>
+        `;
       });
     }
 
